# merve_solar

./: .gitignore  README.md  TODOs.md  main_methodology.md  pyproject.toml
configs/: config_000_smoke.json  config_002_default_full.json  config_fast_hidden_32-16.json  config_fast_lookback_48h.json  experiment_grid.py
outputs/: experiments_ledger.csv
outputs/experiments/config_000_smoke/: log.txt
outputs/experiments/config_000_smoke/checkpoints/: bootstrap_model_0.pt
outputs/experiments/config_000_smoke/metrics/: results_by_horizon.csv  results_summary.csv
outputs/experiments/config_002_default_full/checkpoints/: bootstrap_model_0.pt  bootstrap_model_1.pt  bootstrap_model_2.pt  bootstrap_model_3.pt
outputs/experiments/config_fast_hidden_32-16/: log.txt
outputs/experiments/config_fast_hidden_32-16/checkpoints/: bootstrap_model_0.pt
outputs/experiments/config_fast_hidden_32-16/metrics/: results_by_horizon.csv  results_summary.csv
outputs/experiments/config_fast_lookback_48h/: log.txt
outputs/experiments/config_fast_lookback_48h/checkpoints/: bootstrap_model_0.pt  scaler.joblib
outputs/experiments/config_fast_lookback_48h/metrics/: results_by_horizon.csv  results_summary.csv
scripts/: 01_prepare_base_data.py  run_all_experiments.py  run_experiment.py
src/merve_solar/: bootstrap.py  config.py  data.py  datasets.py  experiment.py  mc_dropout.py  metrics.py  model.py  scaling.py  train.py  utils.py  windows.py
tests/: test_data.py  test_windows.py
